@@ -1,3 +1,8 @@
+2005-09-15  Philippe Khalaf <burger at speedy dor org>
+
+	* src/htdocs/documentation/rtp.xml:
+	  Updating the rtp docs
+	  
 2005-09-11  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* src/htdocs/documentation/Makefile.am:
